--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,10 @@ dependencies {
     implementation "androidx.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'org.koin:koin-androidx-viewmodel:2.1.6'
+
     testImplementation 'junit:junit:4.13.1'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
