--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
 
         <activity-alias
             android:name=".Instagram"
-            android:enabled="false"
+            android:enabled="true"
             android:label="@string/title_instagram"
             android:targetActivity=".launcher.InstagramActivity">
             <intent-filter>
@@ -41,7 +41,7 @@
         </activity-alias>
         <activity-alias
             android:name=".Snapchat"
-            android:enabled="false"
+            android:enabled="true"
             android:label="@string/title_snapchat"
             android:targetActivity=".launcher.SnapchatActivity">
             <intent-filter>
