--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
 
-    implementation 'org.koin:koin-androidx-viewmodel:2.2.0'
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "org.koin:koin-androidx-compose:$koin_version"
 
     testImplementation 'junit:junit:4.13.1'
 
