--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.0.0-alpha10'
-        kotlin_version = '1.4.21'
+        compose_version = '1.0.0-alpha11'
+        kotlin_version = '1.4.21-2'
         koin_version = '2.2.2'
     }
     repositories {
