--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pl.burno.selectionlauncher">
 
     <application
@@ -13,6 +12,7 @@
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity
             android:name="pl.burno.selectionlauncher.ui.MainActivity"
+            android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,9 +30,10 @@
         <activity-alias
             android:name=".Instagram"
             android:enabled="true"
+            android:exported="true"
             android:label="@string/title_instagram"
             android:targetActivity=".launcher.social.InstagramActivity">
-            <intent-filter>
+            <intent-filter android:label="@string/title_instagram">
                 <action android:name="android.intent.action.PROCESS_TEXT" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/plain" />
@@ -41,9 +42,10 @@
         <activity-alias
             android:name=".Snapchat"
             android:enabled="true"
+            android:exported="true"
             android:label="@string/title_snapchat"
             android:targetActivity=".launcher.social.SnapchatActivity">
-            <intent-filter>
+            <intent-filter android:label="@string/title_snapchat">
                 <action android:name="android.intent.action.PROCESS_TEXT" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/plain" />
@@ -54,6 +56,7 @@
     <queries>
         <package android:name="com.instagram.android" />
         <package android:name="com.snapchat.android" />
+
         <intent>
             <action android:name="android.intent.action.VIEW" />
         </intent>
